<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DrawWithCanvasActivity!</string>

    <!-- Classes -->
    <string name="app_name">AndroAR</string>
    <string name="move_selection">MoveSelection</string>

    <!-- Labels -->
    <string name="AndroAR_Title">Andro-Augmented Reality</string>
    <string name="ButtonCapturePhoto">Capture</string>
    <string name="drag">drag</string>
    <string name="send_button">Send</string>
    <string name="navigation">Navigate</string>
    <string name="add_data">Add data</string>
    <string name="camera_preview">Augmented Camera</string>
    <string name="crop_image">Crop Image</string>
    <string name="capture">Capture</string>
    <string name="CroppedPictureHint">Please provide a good labeling keyword.</string>
    <string name="CroppedPictureDesc">Please add a description.</string>
    <string name="labelName">Name: keyboard</string>
    <string name="labelDesc">Description: macbook air keyboard</string>

</resources>