<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tvAndroARTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AndroAR_Title"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingBottom="30dp"
        android:textSize="20dp" />

    <Button
        android:id="@+id/bNavigateActivity"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/navigation" />

    <Button
        android:id="@+id/bAddData"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_data" />

</LinearLayout>